--- a/DOM-and-Events-Lab-Resources/JS-Advanced-DOM-Events-Lab-Resources/01. List-Of-Items/index.html
+++ b/DOM-and-Events-Lab-Resources/JS-Advanced-DOM-Events-Lab-Resources/01. List-Of-Items/index.html
@@ -1,3 +1,6 @@
+<!--Problems for in-class lab for the “JavaScript Advanced” course @ SoftUni.
+Submit your solutions in the SoftUni judge system at https://judge.softuni.org/Contests/2762/DOM-Manipulation-and-Events-Lab -->
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -17,7 +20,7 @@
             <li>Second</li>
         </ul>
         <input type="text" id="newItemText" />
-        <input type="button" id='button' value="Add" onclick="addItem()">
+        <input type="button" value="Add" onclick="addItem()">
     </main>
 </body>
 <script src="./app.js"></script>
