--- a/DOM-and-Events-Lab-Resources/JS-Advanced-DOM-Events-Lab-Resources/03. Add-Delete/index.html
+++ b/DOM-and-Events-Lab-Resources/JS-Advanced-DOM-Events-Lab-Resources/03. Add-Delete/index.html
@@ -1,3 +1,6 @@
+<!--Problems for in-class lab for the “JavaScript Advanced” course @ SoftUni.
+Submit your solutions in the SoftUni judge system at https://judge.softuni.org/Contests/2762/DOM-Manipulation-and-Events-Lab -->
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -6,20 +9,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
-    <title>List of Items</title>
+    <title>Add/Delete</title>
 </head>
 
 <body>
     <h1>List of Items</h1>
     <main>
-        <ul id="items">
-            <li>First</li>
-            <li>Second</li>
-        </ul>
+        <ul id="items"></ul>
         <input type="text" id="newItemText" />
-        <input type="button" id='button' value="Add" onclick="addItem()">
+        <input type="button" value="Add" onclick="addItem()">
     </main>
+    <script src="./app.js"></script>
 </body>
-<script src="./app.js"></script>
 
 </html>
